--- a/template.yaml
+++ b/template.yaml
@@ -453,7 +453,7 @@ Resources:
 
   # Note that CNAMEs are not included here as they were only used for validation needed for public certificate request in ACM. It is a one time setup.
   # Alias record for the vms subdomain domain IPV4
-  CloudFrontAliasRecordA:
+  CloudFrontAliasRecordVMSA:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
@@ -464,7 +464,7 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
-  CloudFrontAliasRecordA:
+  CloudFrontAliasRecordLoginA:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
