--- a/template.yaml
+++ b/template.yaml
@@ -479,7 +479,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
-      Name: login.vms.alphinecodetech.click
+      Name: login.alphinecodetech.click
       Type: CNAME
       TTL: '300'
       ResourceRecords:
