--- a/template.yaml
+++ b/template.yaml
@@ -468,7 +468,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
-      Name: login.vms.alphinecodetech.click
+      Name: login.alphinecodetech.click
       Type: A
       AliasTarget:
         HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
