--- a/template.yaml
+++ b/template.yaml
@@ -453,7 +453,7 @@ Resources:
 
   # Note that CNAMEs are not included here as they were only used for validation needed for public certificate request in ACM. It is a one time setup.
   # Alias record for the vms subdomain domain IPV4
-  CloudFrontAliasRecordVMSA:
+  CloudFrontVMSAliasRecord:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
@@ -464,16 +464,16 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
-  CloudFrontAliasRecordLoginA:
+  CognitoLoginAliasRecord:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
-      Name: login.alphinecodetech.click
+      Name: login.alphinecodetech.click # Your Cognito custom domain
       Type: A
       AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
-        DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
-        EvaluateTargetHealth: false # Important for CloudFront
+        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's global hosted zone ID
+        DNSName: !GetAtt CognitoUserPoolDomain.CloudFrontDomain # Cognito's internal CloudFront
+        EvaluateTargetHealth: false
 
   # CognitoCustomDomainCNAME:
   #   Type: AWS::Route53::RecordSet
