--- a/template.yaml
+++ b/template.yaml
@@ -550,16 +550,17 @@ Resources:
       GenerateSecret: false
       SupportedIdentityProviders:
         - COGNITO
-  # CognitoUserPoolDomain:
-  #   Type: AWS::Cognito::UserPoolDomain
-  #   DependsOn:
-  #     - CloudFrontAliasRecordLoginA
-  #     - HostedZone
-  #   Properties:
-  #     Domain: login.alphinecodetech.click
-  #     UserPoolId: !Ref CognitoUserPool
-  #     CustomDomainConfig:
-  #       CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
+
+  CognitoUserPoolDomain:
+    Type: AWS::Cognito::UserPoolDomain
+    DependsOn:
+      - CognitoLoginAliasRecord
+      - HostedZone
+    Properties:
+      Domain: login.alphinecodetech.click
+      UserPoolId: !Ref CognitoUserPool
+      CustomDomainConfig:
+        CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
 
 Outputs:
   APIGatewayEndpoint:
