--- a/template.yaml
+++ b/template.yaml
@@ -466,13 +466,15 @@ Resources:
 
   CognitoLoginAliasRecord:
     Type: AWS::Route53::RecordSet
+    DependsOn:
+      - CognitoUserPoolDomain # Wait for Cognito domain to be created first
     Properties:
       HostedZoneId: !Ref HostedZone
-      Name: login.alphinecodetech.click # Your Cognito custom domain
+      Name: login.alphinecodetech.click
       Type: A
       AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's global hosted zone ID
-        DNSName: !GetAtt CognitoUserPoolDomain.CloudFrontDomain # Cognito's internal CloudFront
+        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's global zone ID
+        DNSName: !GetAtt CognitoUserPoolDomain.CloudFrontDomain
         EvaluateTargetHealth: false
 
   # CognitoCustomDomainCNAME:
