--- a/template.yaml
+++ b/template.yaml
@@ -576,7 +576,8 @@ Outputs:
   AuthorityUrl:
     Description: Cognito User Pool Authority URL (for OIDC client)
     Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
-  More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
+
+# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     LoggingConfig:
