--- a/template.yaml
+++ b/template.yaml
@@ -453,16 +453,16 @@ Resources:
 
   # Note that CNAMEs are not included here as they were only used for validation needed for public certificate request in ACM. It is a one time setup.
   # Alias record for the vms subdomain domain IPV4
-  CloudFrontVMSAliasRecord:
-    Type: AWS::Route53::RecordSet
-    Properties:
-      HostedZoneId: !Ref HostedZone
-      Name: vms.alphinecodetech.click
-      Type: A
-      AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
-        DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
-        EvaluateTargetHealth: false # Important for CloudFront
+  # CloudFrontVMSAliasRecord:
+  #   Type: AWS::Route53::RecordSet
+  #   Properties:
+  #     HostedZoneId: !Ref HostedZone
+  #     Name: vms.alphinecodetech.click
+  #     Type: A
+  #     AliasTarget:
+  #       HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
+  #       DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
+  #       EvaluateTargetHealth: false # Important for CloudFront
 
   # CognitoLoginAliasRecord:
   #   Type: AWS::Route53::RecordSet
