don't auto verify

--- a/template.yaml
+++ b/template.yaml
@@ -490,8 +490,7 @@ Resources:
           RequireUppercase: true
       UsernameAttributes:
         - email
-      AutoVerifiedAttributes:
-        - email
+      AutoVerifiedAttributes: []
       Schema:
         - Name: phone_number
           AttributeDataType: String
