--- a/template.yaml
+++ b/template.yaml
@@ -571,24 +571,18 @@ Resources:
       UserPoolId: !Ref CognitoUserPool
       Description: Resident users
       Precedence: 1
-      # AdminUser:
-      #   Type: AWS::Cognito::UserPoolUser
-      #   Properties:
-      #     UserPoolId: !Ref CognitoUserPool
-      #     Username: swissgear31@gmail.com
-      #     DesiredDeliveryMediums:
-      #       - EMAIL
-      #     UserAttributes:
-      #       - Name: email
-      #         Value: swissgear31@gmail.com
-      #       - Name: email_verified
-      #         Value: 'true'
-      #       - Name: given_name
-      #         Value: Admin
-      #       - Name: family_name
-      #         Value: User
-      #     MessageAction: SUPPRESS # Prevents sending welcome email
-      #     ForceAliasCreation: false
+
+  AdminUser:
+    Type: AWS::Cognito::UserPoolUser
+    Properties:
+      UserPoolId: !Ref CognitoUserPool
+      Username: admin@example.com
+      DesiredDeliveryMediums:
+        - EMAIL
+      TemporaryPassword: YourSecureTemporaryPassword123! # Set an initial password
+      ForceAliasCreation: false
+      MessageAction: SUPPRESS
+      ForceChangePassword: true
 
 Outputs:
   APIGatewayEndpoint:
