--- a/template.yaml
+++ b/template.yaml
@@ -472,120 +472,94 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
-  # CognitoLoginAliasRecord:
-  #   Type: AWS::Route53::RecordSet
-  #   DependsOn:
-  #     - CognitoUserPoolDomain # Wait for Cognito domain to be created first
-  #   Properties:
-  #     HostedZoneId: !Ref HostedZone
-  #     Name: login.alphinecodetech.click
-  #     Type: A
-  #     AliasTarget:
-  #       HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's global zone ID
-  #       DNSName: !GetAtt CognitoUserPoolDomain.CloudFrontDomain
-  #       EvaluateTargetHealth: false
+  CognitoUserPool:
+    Type: AWS::Cognito::UserPool
+    Properties:
+      UserPoolName: VisitorManagementCognitoUserPool
+      Schema:
+        - Name: "given_name"
+          Required: true
+          Mutable: true
+        - Name: "family_name"
+          Required: true
+          Mutable: true
+        - Name: "email"
+          Required: true
+          Mutable: true
+        - Name: "phone_number"
+          Required: true
+          Mutable: true
+      Policies:
+        PasswordPolicy:
+          MinimumLength: 8
+          RequireLowercase: true
+          RequireNumbers: true
+          RequireSymbols: false
+          RequireUppercase: true
+      UsernameAttributes:
+        - email
+      AutoVerifiedAttributes: []
 
-  # CognitoUserPool:
-  #   Type: AWS::Cognito::UserPool
-  #   Properties:
-  #     UserPoolName: VisitorManagementCognitoUserPool
-  #     Schema:
-  #       - Name: "given_name"
-  #         Required: true
-  #         Mutable: true
-  #       - Name: "family_name"
-  #         Required: true
-  #         Mutable: true
-  #       - Name: "email"
-  #         Required: true
-  #         Mutable: true
-  #       - Name: "phone_number"
-  #         Required: true
-  #         Mutable: true
-  #     Policies:
-  #       PasswordPolicy:
-  #         MinimumLength: 8
-  #         RequireLowercase: true
-  #         RequireNumbers: true
-  #         RequireSymbols: false
-  #         RequireUppercase: true
-  #     UsernameAttributes:
-  #       - email
-  #     AutoVerifiedAttributes: []
+  CognitoUserPoolClient:
+    Type: AWS::Cognito::UserPoolClient
+    Properties:
+      # ReadAttributes:
+      #   - email
+      #   - given_name
+      #   - family_name
+      #   - phone_number
+      # WriteAttributes:
+      #   - email
+      #   - given_name
+      #   - family_name
+      #   - phone_number
+      ClientName: VisitorManagementCognitoClient
+      UserPoolId: !Ref CognitoUserPool
+      AllowedOAuthFlowsUserPoolClient: true
+      AllowedOAuthFlows:
+        - code
+      AllowedOAuthScopes:
+        - email
+        - openid
+        - profile
+      CallbackURLs:
+        - https://vms.alphinecodetech.click/signin-callback
+      LogoutURLs:
+        - https://vms.alphinecodetech.click/signout-callback
+      GenerateSecret: false
+      SupportedIdentityProviders:
+        - COGNITO
+      AccessTokenValidity: 60 # in minutes
+      IdTokenValidity: 60 # in minutes
+      RefreshTokenValidity: 30 # in days
+      TokenValidityUnits:
+        AccessToken: minutes
+        IdToken: minutes
+        RefreshToken: days
 
-  #     # Configure message customizations (email verification, password reset)
-  #     # MessageConfigurations:
-  #     #   EmailMessage: "..."
-  #     #   EmailSubject: "..."
-  #     # Configure MFA if desired
-  #     # MfaConfiguration: OPTIONAL
-  #     # SmsConfiguration:
-  #     #   SmsSenderId: "..."
-  #     #   SmsRegion: "..."
-  #     # Configure user pool add-ons (advanced security features)
-  #     # UserPoolAddOns:
-  #     #   AdvancedSecurityMode: ENFORCED
+  CognitoUserPoolDomain:
+    Type: AWS::Cognito::UserPoolDomain
+    Properties:
+      Domain: !Ref CognitoDomainPrefix
+      UserPoolId: !Ref CognitoUserPool
+      # CustomDomainConfig:
+      #   CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
 
-  # CognitoUserPoolClient:
-  #   Type: AWS::Cognito::UserPoolClient
-  #   Properties:
-  #     # ReadAttributes:
-  #     #   - email
-  #     #   - given_name
-  #     #   - family_name
-  #     #   - phone_number
-  #     # WriteAttributes:
-  #     #   - email
-  #     #   - given_name
-  #     #   - family_name
-  #     #   - phone_number
-  #     ClientName: VisitorManagementCognitoClient
-  #     UserPoolId: !Ref CognitoUserPool
-  #     AllowedOAuthFlowsUserPoolClient: true
-  #     AllowedOAuthFlows:
-  #       - code
-  #     AllowedOAuthScopes:
-  #       - email
-  #       - openid
-  #       - profile
-  #     CallbackURLs:
-  #       - https://vms.alphinecodetech.click/signin-callback
-  #     LogoutURLs:
-  #       - https://vms.alphinecodetech.click/signout-callback
-  #     GenerateSecret: false
-  #     SupportedIdentityProviders:
-  #       - COGNITO
-  #     AccessTokenValidity: 60 # in minutes
-  #     IdTokenValidity: 60 # in minutes
-  #     RefreshTokenValidity: 30 # in days
-  #     TokenValidityUnits:
-  #       AccessToken: minutes
-  #       IdToken: minutes
-  #       RefreshToken: days
+  AdminUserGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: admin
+      UserPoolId: !Ref CognitoUserPool
+      Description: Admin users
+      Precedence: 0
 
-  # CognitoUserPoolDomain:
-  #   Type: AWS::Cognito::UserPoolDomain
-  #   Properties:
-  #     Domain: !Ref CognitoDomainPrefix
-  #     UserPoolId: !Ref CognitoUserPool
-  #     # CustomDomainConfig:
-  #     #   CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
-
-  # AdminUserGroup:
-  #   Type: AWS::Cognito::UserPoolGroup
-  #   Properties:
-  #     GroupName: admin
-  #     UserPoolId: !Ref CognitoUserPool
-  #     Description: Admin users
-  #     Precedence: 0
-
-  # ResidentUserGroup:
-  #   Type: AWS::Cognito::UserPoolGroup
-  #   Properties:
-  #     GroupName: resident
-  #     UserPoolId: !Ref CognitoUserPool
-  #     Description: Resident users
-  #     Precedence: 1
+  ResidentUserGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: resident
+      UserPoolId: !Ref CognitoUserPool
+      Description: Resident users
+      Precedence: 1
 
 Outputs:
   APIGatewayEndpoint:
@@ -600,18 +574,18 @@ Outputs:
   WebS3BucketName:
     Description: S3 Bucket for hosting web frontend
     Value: !Ref WebSiteBucket
-  # UserPoolId:
-  #   Description: Cognito User Pool ID
-  #   Value: !Ref CognitoUserPool
-  # UserPoolClientId:
-  #   Description: Cognito User Pool Client ID
-  #   Value: !Ref CognitoUserPoolClient
-  # UserPoolDomainUrl:
-  #   Description: Cognito User Pool Domain URL
-  #   Value: !Sub https://${CognitoDomainPrefix}.auth.${AWS::Region}.amazoncognito.com
-  # AuthorityUrl:
-  #   Description: Cognito User Pool Authority URL (for OIDC client)
-  #   Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
+  UserPoolId:
+    Description: Cognito User Pool ID
+    Value: !Ref CognitoUserPool
+  UserPoolClientId:
+    Description: Cognito User Pool Client ID
+    Value: !Ref CognitoUserPoolClient
+  UserPoolDomainUrl:
+    Description: Cognito User Pool Domain URL
+    Value: !Sub https://${CognitoDomainPrefix}.auth.${AWS::Region}.amazoncognito.com
+  AuthorityUrl:
+    Description: Cognito User Pool Authority URL (for OIDC client)
+    Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
